Anfänge Quantity (Gliederung und Units)
git-svn-id: file:///home/nik/repositories/svn/master@496 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -51,7 +51,7 @@ Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleist
 Mittels setConversion() wird eine bereits gesetzte Conversion für eine Unit überschrieben.
 Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notwendig, da diese ja in Abhängigkeit zu einer nun veralteten DefaultUnit angegeben wurden. Das betrifft alle Umrechnungen für Units zum selben UnitType wie die DefaultUnit. Die folgende Grafik beschreibt die Umrechnungen, falls sich eine DefaultUnit ändert.
 \begin{figure}[setDefaultUnit]
-	\includegraphics{images/setDefaultUnit}
+	\includegraphics{images/quantity/setDefaultUnit}
 	\caption{Umrechnung beim Ändern einer DefaultUnit}
 \end{figure}
 
