- Grobe Gliederung für Measurement angelegt. - Kleine Änderungen in Operation vorgenommen. - Nummerierungstiefe der Unterkapitel auf 5 geändert (bis Kapitel 1.1.1.1.1). - Nach jedem Unterkapitel der Ebene 2 (subsection) beginnt eine neue Seite zur Übersichtlichkeit.
git-svn-id: file:///home/nik/repositories/svn/master@537 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell.tex
@@ -1,13 +1,19 @@
 \section{Metamodell} 
 
+\TODO[Bisschen allgemeines Geplänkel]
+
 % Kapitel
+\newpage
 \input{\content/sections/Metamodell_Types} % Inhalt einbinden
 
 % Kapitel
+\newpage
 \input{\content/sections/Metamodell_Operation} % Inhalt einbinden
 
 % Kapitel
+\newpage
 \input{\content/sections/Metamodell_Quantity} % Inhalt einbinden
 
 % Kapitel
+\newpage
 \input{\content/sections/Metamodell_Measurement} % Inhalt einbinden
