--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -72,7 +72,8 @@ Formalparametern an Assoziationen, wird dem Anwender über die Oberfläche nicht
 Eine Mögliche zur Interpretation von Formalparametern für Assoziationen sind die n-stelligen Assoziationen
 welche in der ersten Implementierungsstufe nicht umgesetzt wurden.
 
-\subsubsubsection{AssociationManager} \newline
+\subsubsubsection{AssociationManager}
+
 Der AssoziationManager bietet sechs transaktionale Operationen an und beinhaltet zwei Listen, welche er verwaltet.
 Die eine Liste beinhaltet alle erstellten Assoziationen und die andere alle Hierarchien. Diese beiden Listen werden dem Anwender an der 
 Oberfläche präsentiert und dienen der Verwaltung der darin enthaltenen Objekte.
@@ -113,7 +114,7 @@ Assoziation einer Hierarchie aus der Hierarchie zu entfernen, wird eine \emph{Co
 \end{description}
 
 
-
+\newpage
 \subsection{Messages und Links}
 
 Messages und Links haben eine gemeinsame Oberklasse MessageOrLink. In der ersten Ausbaustufe werden lediglich die Links implementiert. Zu den Messages existiert eine rudimentäre
