--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -1,8 +1,9 @@
 \subsection{Quantity}
 TODO Dient zum Abbilden von Werten mit Einheit
 
-\subsubsection{Die Manager} \newline
-\subsubsubsection{UnitTypeManager} \newline
+\subsubsection{Die Manager}
+
+\subsubsubsection{UnitTypeManager}
 Der UnitTypeManager beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht sichtbare Listen zur Verwaltung von Einheiten (Units) und Einheitentypen (UnitTypes).
 
 \begin{description}
@@ -12,9 +13,9 @@ Der UnitTypeManager beinhaltet zwei auf der Oberfläche sichtbare und zwei nicht
 \item[Reference** refs] Hier werden alle Referenzen abgelegt, die der Manager verwaltet. Sie ist nicht sichtbar und dient nur zur internen Verarbeitung von zusammengesetzten Einheiten (CompoundUnits)
 \end{description}
 
-\subsubsubsection{QuantityManager} \newline
+\subsubsubsection{QuantityManager} 
 
-\subsubsection{Einheitentypen} \newline
+\subsubsection{Einheitentypen}
 Die Einheitentypen (UnitTypes) geben an, welche verschiedenen Einheiten fachlich zusammen gehören. Beispielsweise sind Dollar und Euro beides Währungen und können damit zusammengerechnet werden. In diesem Fall ist der Einheitentyp Währung und die beiden zugehörigen Einheiten sind Dollar und Euro. Bei Euro und Kilometer hingegen macht es wenig Sinn, diese zu Addieren oder zu Subtrahieren, denn das eine ist eine Währung und das andere eine Strecken-Angabe. Die Multiplikation und Division hingegen können auch auf unterschiedlichen Einheitentypen geschehen, wodurch dann zusammengesetzte Einheitentypen (CompoundUnitTypes) wie Geschwindigkeit (Strecke/Zeit) entstehen.
 
 Zur Verwaltung von UnitTypes und CompoundUnitTypes stellt der UnitTypeManager 7 transaktionale Operationen bereit. Folgende dieser Operationen sind direkt über die Oberfläche erreichbar:
@@ -35,7 +36,7 @@ Folgende Operationen sind für die interne Verarbeitung relevant und können nic
 \end{description}
 
 
-\subsubsection{Einheiten} \newline
+\subsubsection{Einheiten}
 Fachlich gesehen können Einheiten (Units) von Quantitäten angenommen werden und sind in Einheitentypen typisiert.
 Dabei wird zwischen atomaren Einheiten (z.B. Meter [m]) und zusammengesetzten Einheiten (z.B. Kilometer pro Stunde [km/h]) unterschieden.
 \subsubsubsection{Verwalten von Units} \newline
@@ -72,7 +73,7 @@ Eine Conversion, also die Umrechnung von einer Unit zur entsprechend zum UnitTyp
 Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede Conversion enthält also einen Faktor und eine Konstante (als Fraction), um der linearen Funktion m*x+b gerecht zu weden. Die Angabe von m und b hat folgende Semantik: y DefaultUnit = m * unitWert + b.
 Am Beispiel von Fahrenheit und Celsius würde für Celsius die Conversion folgendermaßen lauten, wenn Fahrenheit die DefaultUnit darstellt:
 
-\( Wert_{°F} = Wert_{°C} * \frac{9}{5} + 32 \)
+\( Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32 \)
 
 Mittels setConversion() wird eine bereits gesetzte Conversion für eine Unit überschrieben.
 Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notwendig, da diese ja in Abhängigkeit zu einer nun veralteten DefaultUnit angegeben wurden. Das betrifft alle Umrechnungen für Units zum selben UnitType wie die DefaultUnit.
@@ -83,4 +84,4 @@ Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notw
 	\caption{Umrechnung beim Ändern einer DefaultUnit}
 \end{figure}
 
-\subsubsection{Quantitäten} \newline
+\subsubsection{Quantitäten}
