--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -1,5 +1,7 @@
 \subsection{Measurement}
 
+\TODO[Measurement fachlich beschreiben]
+
 Auf der Modellebene befinden sich im Bereich \term{Measurement} zunächst drei Klassen: \term{MeasurementType}, \term{AccountType}
 und deren gemeinsame Oberklasse \term{QuantifiedObjectType}. Auf der Exemplarebene finden sich deren Pendants als \term{Measurement},
 \term{Account} und \term{QuantifiedObject}.
@@ -8,6 +10,24 @@ Die Operation \term{aggregate} des \term{QuantifiedObjects} fordert zudem eine s
 die in vier Unterklassen konkret ausgeprägt werden kann.
 Zusätzlich existieren drei Manager: der \term{MeasurementTypeManager}, der \term{AccountTypeManager} und der \term{AccountManager}.
 Diese Klassen werden im Folgenden nach Themengebieten beschrieben.
+
+
+\subsubsection{QuantifiedObject}
+
+\TODO[Kapitel schreiben]
+
+-- Attribute: MObject object
+
+-- Nur Operation aggregate
+
+
+\subsubsection{QuantifiedObjectType}
+
+\TODO[Kapitel schreiben]
+
+-- Attribute: MType type, AbsUnitType unitType
+
+-- Keine Operationen
 
 
 \subsubsection{Account}
@@ -23,6 +43,8 @@ Diese Klassen werden im Folgenden nach Themengebieten beschrieben.
 	\item[addSubAccount] Beschreiben
 \end{description}
 
+\img[width=\relWidth{0.8}]{measurement/bild.png}{Bildunterschrift}{Measurement:EindeutigesLabel}
+
 
 \subsubsection{AccountType}
 
@@ -35,6 +57,11 @@ Diese Klassen werden im Folgenden nach Themengebieten beschrieben.
 \begin{description}
 	\item[addSubAccountType] Beschreiben
 \end{description}
+
+
+\subsubsection{Account \& AccountType}
+
+\TODO[Kapitel schreiben]
 
 
 \subsubsection{AccountManager}
@@ -95,24 +122,6 @@ Diese Klassen werden im Folgenden nach Themengebieten beschrieben.
 \begin{description}
 	\item[createMeasurementType] Beschreiben
 \end{description}
-
-
-\subsubsection{QuantifiedObject}
-
-\TODO[Kapitel schreiben]
-
--- Attribute: MObject object
-
--- Nur Operation aggregate
-
-
-\subsubsection{QuantifiedObjectType}
-
-\TODO[Kapitel schreiben]
-
--- Attribute: MType type, AbsUnitType unitType
-
--- Keine Operationen
 
 
 \subsubsection{AggregationStrategy}
