--- a/public/doku/metaModel/trunk/content/sections/Metamodell.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell.tex
@@ -4,6 +4,12 @@
 
 % Kapitel
 \newpage
+\input{\content/sections/Metamodell_ModelItem} % Inhalt einbinden
+
+
+
+\newpage
+% Kapitel
 \input{\content/sections/Metamodell_Types} % Inhalt einbinden
 
 % Kapitel
