--- a/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_ModelItem.tex
@@ -1,3 +1,11 @@
-\subsection{Types}
+\subsection{ModelItem}
+
+\term{ModelItem} ist als abstrakte Oberklasse für alle Modellelemente konzeptioniert. 
+Zentrale Aufgabe dieser Klasse ist es, einen Abhängigkeitsgraphen über Modellelemente erstellen zu können und 
+das Löschen dieser zu vereinheitlichen. 
+
+\subsubsection{Operationen}
+
+
 
 \TODO[Kapitel schreiben]
